--- a/assets/public/style/style.css
+++ b/assets/public/style/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 *{
     margin: 0px;
@@ -8,6 +8,9 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body{
+    overflow-x: hidden;
+}
 :root{
     --DARK-CYAN-BLUE: #027f8d;
     --CYAN: #00A3B5;
@@ -15,28 +18,41 @@
     --DARK-RED: #692C00;
     --RED: #B54B00;
 }
+::-webkit-scrollbar{
+    background-color: var(--RED);
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--LIGHT-BLUE);
+}
 .nav-menu{
     display: flex;
     justify-content: space-between;
+    padding-left: 9.6vw;
 }
 .container{
+    position: relative;
     background-color: var(--LIGHT-BLUE);
     width: 100vw;
-    height: 8vh;
-    padding-top: 25px;
+    height: 6.5vh;
+    padding-top: 1.4vh;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.24);
+    margin-top: 2vh;
+
 }
 .nav-menu li > a{
+    position: relative;
     text-decoration: none;
     color: white;
     margin-left: 5vw;
-    font-size: 20px;
-    -webkit-transition: padding 1s;
+    font-size: 1vw;
+    -webkit-transition: .5s;
+    top: -1.5vh;
 }
 .nav-menu li > a:hover{
-    background-color: #12d3da;
-    border-radius: 10px;
-    transition: all ease-in-out 0.5s;
-    padding: 5px 20px 5px 20px;
+    background-color: #00999e;
+    border-radius: 15px;
+    transition: all ease 0.4s;
+    padding: 8px 20px 8px 20px;
     cursor: pointer;
 }
 .nav-menu li{
@@ -46,155 +62,80 @@
     background-color: var(--LIGHT-BLUE);
     width: 30vw;
 }
-.gg-instagram {
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    transform: scale(var(--ggs,1.8));
-    border: 2px solid transparent;
-    box-shadow: 0 0 0 2px;
-    border-radius: 4px;
-    width: 20px;
-    height: 20px;
-    color: white;
-    right: -80%;
-    bottom: 5vh;
-    margin-left: -30px;
-}
-.gg-instagram::after,
-.gg-instagram::before {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute
-}
-.gg-instagram::after {
-    border: 2px solid;
-    left: 3px;
-    width: 10px;
-    height: 10px;
-    border-radius: 100%;
-    top: 3px
-}
-.gg-instagram::before {
-    border-radius: 3px;
-    width: 2px;
-    height: 2px;
-    background: currentColor;
-    right: 1px;
-    top: 1px
-}
-.gg-facebook {
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    transform: scale(var(--ggs,2));
-    width: 20px;
-    height: 20px;
-    background-color: white;
-    color: var(--LIGHT-BLUE);
-    right: -84%;
-    bottom: 7vh;
-    margin-left: -15px;
-}
-.gg-facebook::after,
-.gg-facebook::before {
-    content: "";
-    display: block;
-    position: absolute;
-    box-sizing: border-box
-}
-.gg-facebook::before {
-    width: 8px;
-    height: 20px;
-    border-left: 4px solid;
-    border-top: 4px solid;
-    border-top-left-radius: 5px;
-    left: 6px
-}
-.gg-facebook::after {
-    width: 10px;
-    height: 4px;
-    background: currentColor;
-    top: 7px;
-    left: 4px;
-    transform: skew(-5deg)
-}
-.gg-search {
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    transform: scale(var(--ggs,2));
-    width: 16px;
-    height: 16px;
-    border: 2px solid;
-    border-radius: 100%;
-    margin-left: -4px;
-    margin-top: -4px;
-    right: -88%;
-    bottom: 8.8vh;
-    color: white;
-}
-.gg-search::after {
-    content: "";
-    display: block;
-    box-sizing: border-box;
-    position: absolute;
-    border-radius: 3px;
-    width: 2px;
-    height: 8px;
-    background: currentColor;
-    transform: rotate(-45deg);
-    top: 10px;
-    left: 12px
-}
 .logo{
-    border-radius: 50%;
-    height: 80px;
+    border-radius: 20px 80px 60px;
+    height: 100px;
     margin-left: 5vw;
     margin-top: 3vh;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.336);
 }
 .info{
     display: flex;
     flex-direction: row;
     justify-content: center;
     font-size: 20px;
+    padding-left: 20vw;
+    margin-top: -2vh;
+}
+.doutor{
+    padding-left: 12vw;
 }
 #atendimento{
+    position: absolute;
     color: var(--DARK-CYAN-BLUE);
     font-weight: bold;
+    font-size: 0.9vw;
+    top: 12vh;
+    left: 39%;
 }
 .contato-pos{
-    margin-top: -14vh;
-    padding-left: 10%;
+    position: absolute;
+    margin-top: -12vh;
+    left: 38.6vw;
 }
 #contato{
+    position: relative;
     font-weight: bold;
     color: var(--DARK-CYAN-BLUE);
+    padding-top: 0.2vh;
+    font-size: 0.9vw;
+    right: -39.8vw;
+    top: 5vh;
+}
+#clock{
+    position: relative;
+    left: -3vw;
 }
 #msg{
+    position: absolute;
     font-weight: bold;
     color: var(--DARK-CYAN-BLUE);
-    padding-left: 13vw;
+    font-size: 0.9vw;
+    right: 32.7%;
+    top: 11.8vh;
+    padding-top: 1vh;
 }
 #mensagem{
-    padding-top: 40px;
-    padding-left: 11vw;
+    position: absolute;
+    padding-top: 1.3vh;
+    left: 58%;
 }
 #contact{
-    padding-top: 20px;
+    position: absolute;
+    margin-top: -6px;
+    right: -40vw;
 }
 #dr{
     color: var(--CYAN);
     font-weight: bold;
     font-size: 15px;
-    padding-left: 40px;
+    padding-left: 2.8vw;
 }
 #drp{
     font-weight: 300;
-    font-size: 10px;
-    padding-left: 90px;
-    padding-bottom: 20px;
+    font-size: 13px;
+    padding-left: 4.4vw;
+    padding-bottom: 1vw;
 }
 .gg-time {
     box-sizing: border-box;
@@ -274,3 +215,482 @@
     bottom: 2px;
     left: 2px
  }
+ section{
+    padding-left: 14.5vw;
+ }
+ section h1{
+    color: var(--CYAN);
+    padding-top: 1vh;
+    font-size: 60px;
+    padding-bottom: 1vh;
+ }
+ .common{
+    font-size: 15px;
+    font-weight: 300;
+ }
+#petimg{
+    position: relative;
+}
+.pet{
+    position: absolute;
+    right: -1vw;
+    top: -35.3vh;
+    height: 70vh;
+    width: 40vw;
+}
+ section p{
+    padding-bottom: 4vh;
+ }
+ .circle{
+    position: absolute;
+    width: 37vw;
+    height: 68vh;
+    background-color: var(--CYAN);
+    border-radius: 50%;
+    right: -5vw;
+    top: 26.36vh;
+    box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.226);
+ }
+ .circle2{
+    position: absolute;
+    width: 35vw;
+    height: 60vh;
+    background-color: white;
+    border-radius: 50%;
+    right: -5vw;
+    top: 29.5vh;
+ }
+ .btn1{
+    background-color: var(--LIGHT-BLUE);
+    border: var(--LIGHT-BLUE);
+    color: white;
+    width: 15vw;
+    height: 6vh;
+    border-radius: 5px;
+    font-size: 18px;
+    margin-right: 2vw;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.336);
+    letter-spacing: 2.5px;
+    -webkit-transition: 1s ease;
+    cursor: pointer;
+ }
+ .btn2{
+    background-color: var(--RED);
+    border: var(--RED);
+    color: white;
+    width: 15vw;
+    height: 6vh;
+    border-radius: 5px;
+    font-size: 18px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.336);
+    letter-spacing: 2.5px;
+    -webkit-transition: 1s ease;
+    margin-bottom: 15vh;
+    cursor: pointer;
+ }
+ .btn1:hover{
+    background-color: #62edf1;
+    box-shadow: 0px 15px 20px rgba(11, 226, 233, 50%);
+    transform: translateY(-7px);
+    transition-duration: .3s;
+ }
+ .btn2:hover{
+    background-color: #f8655a;
+    box-shadow: 0px 15px 20px rgba(240, 28, 0, 0.5);
+    transform: translateY(-7px);
+    transition-duration: .3s;
+ }
+ .section3cards{
+    position: relative;
+    background-color: rgb(236, 236, 236);
+    height: 50vh;
+    width: 100vw;
+    overflow-x: hidden;
+ }
+ .waves {
+    background-color: var(--CYAN);
+    position: relative;
+    width: 100vw;
+    height: 15vh;
+    margin-bottom: -7px;
+    min-height: 100px;
+    max-height: 150px;
+    overflow-x: hidden;
+  }
+  
+  /* Animation */
+  
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+      transform: translate3d(-90px, 0, 0);
+    }
+    100% {
+      transform: translate3d(85px, 0, 0);
+    }
+  }
+ .row{ 
+    width: 80vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-top: 5vh;
+ }
+.consultas{
+    position: absolute;
+    padding-top: 4vh;
+    font-size: 0.8vw;
+    left: 14.4vw;
+}
+.vaccine{
+    position: relative;
+    width: 9vw;
+    top: 3vh;
+    left: 31%;
+}
+.consulta{
+    position: relative;
+    width: 7vw;
+    left: -10vw;
+    top: 2.5vh;
+}
+.cirurgia{
+    position: relative;
+    width: 7vw;
+    right: -42vw;
+    top: 3vh;
+}
+.vacinas{
+    position: absolute;
+    padding-top: 4vh;
+    font-size: 0.8vw;
+    left: 42vw;
+}
+.leftText{
+    position: relative;
+    left: -16.7vw;
+}
+.centerText{
+    position: relative;
+    left: -10.8vw;
+}
+.cirurgias{
+    position: absolute;
+    font-size: 0.8vw;
+    right: 8vw;
+    padding-top: 3.5vh;
+}
+.rightText{
+    position: relative;
+    right: -1vw;
+}
+.cards-links{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    position: relative;
+    bottom: -20vh;
+    left: -17vw;
+}
+.cards-links a{
+    text-decoration: none;
+    font-size: 23px;
+    font-weight: bold;
+    color: var(--RED);
+}
+.moreInfo{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15vh;
+}
+.moreInfo a{
+    text-decoration: none;
+    color: var(--RED);
+    font-size: 25px;
+    font-weight: 500;
+}
+.centerInfo{
+    position: relative;
+    left: -11.2vw;
+    transition: all .5s;
+}
+.leftInfo{
+    position: relative;
+    left: -.2vw;
+    
+}
+.padarrow{
+    transition: all .5s ease;
+}
+.padarrow:hover{
+    padding-right: 0.3vw;
+}
+.rightInfo{
+    position: relative;
+    right: 17.4vw;
+    transition: all .5s ease;
+}
+#arrow{
+    position: relative;
+    left: 0.3vw;
+    top: 0.3vh;
+    -webkit-transition: 1s ease;
+}
+#arrow2{
+    position: relative;
+    left: 0.3vw;
+    top: 0.3vh;
+    -webkit-transition: 1s ease;
+}
+#arrow3{
+    position: relative;
+    left: 0.3vw;
+    top: 0.3vh;
+    -webkit-transition: 1s ease;
+}
+#banneragende{
+    position: relative;
+    background-image: url(/assets/public/img/5513030.jpg);
+    color: white;
+    margin-top: 10vh;
+    height: 35vh;
+    font-size: 1.3vw;
+}
+.bannertitle{
+    padding-bottom: 3vh;
+}
+.bannerinfo{
+    padding-top: 3vh;
+}
+.whatsapp{
+    background: var(--RED);
+    width: 30vh;
+    height: 5vh;
+    border-color: transparent;
+    border-radius: 3px;
+    color: white;
+    font-size: 17px;
+    -webkit-transition: 0.5s ease;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.233);
+}
+.whatsapp:hover{
+    cursor: pointer;
+    transform: scale(1.1, 1.1);
+    border-radius: 12px;
+    transition: all .3s ease;    
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.39);
+    background-color: #7e3400;
+}
+#jovem{
+    position: absolute;
+    left: 50%;
+    top: -34.3%;
+    height: 47vh;
+}
+#banneratende{
+    position: relative;
+    margin-top: 10vh;
+    height: 65vh;
+}
+#regiao{
+    font-size: 35px;
+    margin-top: -3vh;
+}
+#banneratende p{
+    margin-top: 5vh;
+    font-weight: 300;
+    margin-bottom: -2vh;
+}
+#sp{
+    font-size: 25px;
+    margin-bottom: 2vh;
+}
+.whatsapp2{
+    background-color: var(--LIGHT-BLUE);
+    color: white;
+    border-color: transparent;
+    width: 15vw;
+    height: 5vh;
+    font-size: 0.9vw;
+    font-weight: 600;
+    border-radius: 4px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.308);
+    -webkit-transition: 0.5s ease;
+}
+.whatsapp2:hover{
+    cursor: pointer;
+    transform: scale(1.1, 1.1);
+    border-radius: 12px;
+    transition: all .3s ease;    
+    box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.39);
+    background-color: var(--DARK-CYAN-BLUE);
+}
+.responsive-img{
+    position: absolute;
+    width: 38vw;
+    height: 58vh;
+    right: -12vw;
+    top: 30vh;
+    border-radius: 20px;
+    transform: translate(-50%, -50%);
+}
+#bannerelogios{
+    background-image: url(/assets/public/img/close-up-beautiful-cat\ \(1\).jpg);
+    height: 40vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin-top: 5vh;
+    color: white;
+    font-size: 20px;
+    margin-bottom: 20vh;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.349);
+}
+.services-menu a{
+    text-decoration: none;
+    color: black;
+    padding-left: 1vw;
+    padding-top: 2vh;
+    transition: all .3s;
+    padding-bottom: 1vh;
+    letter-spacing: 2px;
+}
+.services-menu{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    left: 31%;
+    top: 26%;
+    background-color: rgb(233, 233, 233);
+    width: 9vw;
+    height: 28vh;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.582);
+    border-radius: 3px;
+    transition: all .2s
+}
+.services-menu a:hover{
+    background-color: rgb(201, 201, 201);
+}
+.hidden{ 
+    font-size: 0vh;
+    width: 0vw;
+    height: 0vh;
+}
+#bannerelogios p{
+    font-weight: 300;
+    position: absolute;
+    left: 35%;
+    bottom: -198vh;
+}
+#bannerelogios h3{
+    font-size: 40px;
+    position: absolute;
+    left: 48%;
+    bottom: -180vh;
+}
+footer{
+    background-color: #313131;
+    height: 40vh;
+}
+footer h3{
+    color: var(--CYAN);
+    position: relative;
+    left: 6vw;
+}
+.separacao-footer{
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
+}
+.separacao-footer ul{
+    list-style: none;
+}
+.leftList{
+    position: absolute;
+    left: 16.4vw;
+}
+.centerList{
+    position: absolute;
+    left: 29.5vw;
+}
+#estado{
+    position: absolute;
+    left: 49vw;
+    padding-top: 2vh;
+}
+.rightList{
+    position: absolute;
+    left: 68.2vw;
+}
+li {
+    padding-top: 2vh;
+}
+#atendimento-footer{
+    position: absolute;
+    left: 47.8vw;
+    padding-top: 10vh;
+}
+#atendimento-footer p{
+    position: relative;
+    left: 1vw;
+}
+.swiper{
+    width: 80%;
+    height: fit-content;
+    position: absolute;
+    left: -4%;
+}
+.container-coments{
+    width: 100%;
+    height: 40vh;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    left: -6%;
+}
+.swiper-slide h3{
+    width: 100%;
+}
+.swiper-slide p{
+    width: 100%;
+}
+.nome{
+    position: absolute;
+    top: 7%;
+    font-size: 2vw;
+    font-weight: bold;
+}
+.swiper .swiper-button-prev, .swiper .swiper-button-next{
+    color: white
+}
+.swiper .swiper-pagination-bullet-active{
+    background-color: white;
+    position: relative;
+    left: -6%;
+}
+.stars{
+    width: 10vw;
+    position: absolute;
+    bottom: 25%;
+}
